--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>AshwinRam</h1>
+    <h1>Hello, my name is Ashwin Ram! Welcome to my personal website. </h1>
     <p> Ashwin Ram</p>
     <p> Ashwin Ram</p>
     <p> Ashwin Ram</p>
