--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>ASHWIN RAM</h1>
-							<p class="major"> Aspiring venture capitalist studying Computer Engineering with a focus on Machine Learning, Data Science, and Power Electronics. Thank you for visiting my website! <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<p class="major"> Aspiring venture capitalist studying Computer Engineering with a focus on Machine Learning, Data Science, and Power Electronics. Thank you for visiting my website!
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
