--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="" />
+							<img src="images/UT.jpg" alt="" />
 						</div>
 					</section>
 
@@ -335,7 +335,7 @@
 								<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/ashwin-ram-b33332210/" class="icon brands style2 fa-linkedin-in"><span class="label"> LinkedIn</span></a></li>
-								<li><a href=""ashwin.ram@utexas.edu" class="icon style2 fa-envelope"><span class="label">Feel free to email me!</span></a></li>
+								<li><a href="mailto: ashwin.ram@utexas.edu" class="icon style2 fa-envelope"><span class="label">Feel free to email me!</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
