--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Ashwin.jpg" alt="" />
+							<img src="images/UT.jpg" alt="" />
 						</div>
 					</section>
 
