--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Engineering Coursework Taken at UT Austin </h2>
+							<p> ECE422C(Advanced Software Design and Implementation II in Java), ECE313 (Linear Systems and Signals), ECE312 (Software Design and Implementation I in C/C++), 
+							ECE411 (Circuit Theory), ECE302 (Introduction to Electrical Engineering), ECE306 (Introduction to Computing), M340L (Matrix Theory), M343K (Abstract Algebra).
+							M427L (Vector Calculus), M325K (Mathematics for Computer Scientists), M427J (Linear Algebra and Differential Equations), M408D (Sequences, Series and Multivariable Calculus)	
+							</p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/Ashwin.jpg" alt="" />
 						</div>
 					</section>
 
