--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/work.png" alt="" />
 						</div>
 					</section>
 
