--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 			<ol>
  			<li> <h3> Department of Electrical and Computer Engineering at the University of Texas at Austin</h3> </li>
                     <ul>
-                    <li> <h4>Fall 2022: ECE411 (Circuit Theory) Teaching Assistant </h4>
+                    <li> <h4>Fall 2022: ECE411 (Circuit Theory) Teaching Assistant  </h4>
+			    <p> Concepts ranging from Kirchoff's Voltage and Current Laws to RC, RL, and RLC Circuits, to DC Steady State and AC Circuit Analysis
+				    to transformer circuits and magnetic coupling, to three-phase circuit analysis and three-phase power. 
                     </ul>
                              
   <li><h3> Applied Computing Foundation</h3></li>
@@ -89,7 +91,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/work.png" alt="" />
+							<img src="images/WORK.png" alt="" />
 						</div>
 					</section>
 
