--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/WORK.png" alt="" />
+							<img src="images/engineering.jpg" alt="" />
 						</div>
 					</section>
 
