--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Engineering Coursework Taken at UT Austin </h2>
-							<p> ECE422C(Advanced Software Design and Implementation II in Java), ECE313 (Linear Systems and Signals), ECE312 (Software Design and Implementation I in C/C++), 
-							ECE411 (Circuit Theory), ECE302 (Introduction to Electrical Engineering), ECE306 (Introduction to Computing), M340L (Matrix Theory), M343K (Abstract Algebra).
-							M427L (Vector Calculus), M325K (Mathematics for Computer Scientists), M427J (Linear Algebra and Differential Equations), M408D (Sequences, Series and Multivariable Calculus)	
-							</p>
+							<ul>
+							<li> <h4> ECE Courses <h4> <ul><li> ECE422C(Advanced Software Design and Implementation II in Java) <li> ECE313 (Linear Systems and Signals) <li> ECE333T (Engineering Communication) <li> ECE411 (Circuit Theory) <li> ECE302 (Introduction to Electrical Engineering) <li> ECE306 (Introduction to Computing) </ul>
+    
+    <li> Math Courses
+    <ul>
+    <li> M340L (Matrix Theory) <li> M343K (Abstract Algebra) <li> M325K (Mathematics for Computer Scientists) <li> M427L (Vector Calculus) <li> M427J (Differential Equations and Linear Algebra <li> M408S (Sequences, Series, and Multivariable Calculus)
+    
+    </ul>
+    </ul>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
