--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <li> Math Courses
     <ul>
-    <li> M340L (Matrix Theory) <li> M343K (Abstract Algebra) <li> M325K (Mathematics for Computer Scientists) <li> M427L (Vector Calculus) <li> M427J (Differential Equations and Linear Algebra <li> M408S (Sequences, Series, and Multivariable Calculus)
+    <li> M340L (Matrix Theory) <li> M343K (Abstract Algebra) <li> M325K (Mathematics for Computer Scientists) <li> M427L (Vector Calculus) <li> M427J (Differential Equations and Linear Algebra <li> M408D (Sequences, Series, and Multivariable Calculus)
     
     </ul>
     </ul>
