--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>ASHWIN RAM</h1>
-							<p class="major"> Aspiring venture capitalist studying Computer Engineering with a focus on Machine Learning, Data Science, and Power Electronics. Thank you for visiting my personal website!
+							<p class="major"> Aspiring venture capitalist studying Computer Engineering with a focus on Machine Learning, Data Science, and Power Electronics. Outside of these topics, I enjoy running,
+							working out, playing basketball, giving speeches, and meeting and talking with new people.
+							Thank you for visiting my personal website!
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
