--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 						<div class="content">
 						
 							<h2>Engineering Coursework Taken at UT Austin </h2>
-							<h4>In-Progress Engineering Coursework Taken at UT Austin (Spring 2023) </h4>
+							<ul>
+							<li> <h4>In-Progress Engineering Coursework Taken at UT Austin (Spring 2023) </h4> 
 							<ul> 
 							<li> ECE382V (Human Signals: Sensing and Analysis)
 							<li> ECE360C (Algorithms)
@@ -46,6 +47,7 @@
 							<li> ECE316 (Digital Logic Design)
 							<li> ECE461L (Software Engineering and Design Laboratory)
 							<li> M365C (Real Analysis I)
+							</ul>
 							</ul>
 							<ul>
 							<li> <h4> ECE Courses <h4> <ul> <li> ECE422C(Advanced Software Design and Implementation II in Java) <li> ECE313 (Linear Systems and Signals) <li> ECE333T (Engineering Communication) <li> ECE312 (Software Design in C/C++) <li> ECE411 (Circuit Theory) <li> ECE302 (Introduction to Electrical Engineering) <li> ECE306 (Introduction to Computing) </ul>
