--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
  			<li> <h3> Department of Electrical and Computer Engineering at the University of Texas at Austin</h3> </li>
                     <ul>
                     <li> <h4>Fall 2022: ECE411 (Circuit Theory) Teaching Assistant  </h4>
-			    <p> Concepts ranging from Kirchoff's Voltage and Current Laws to RC, RL, and RLC Circuits, to DC Steady State and AC Circuit Analysis
+			    <p> Educate and assist in the engineering laboratory over 150+ students on concepts ranging from Kirchoff's Voltage and Current Laws to RC, RL, and RLC Circuits, to DC Steady State and AC Circuit Analysis
 				    to transformer circuits and magnetic coupling, to three-phase circuit analysis and three-phase power. 
+		    <li> <h4>Fall 2022: M427L-H (Vector Calculus Honors) Teaching Assistant  </h4>
+			    <p> Educate over 100+ students in concepts ranging from matrices, elements of vector analysis and calculus functions of several variables, including gradient, divergence, and curl of a vector field, multiple integrals and chain rules, length and area, line and surface integrals, Greens theorem in the plane and space.
                     </ul>
                              
   <li><h3> Applied Computing Foundation</h3></li>
