--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>TECHNICAL PROJECTS</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p> Shown below are a host of projects that I have done in engineering, computer science and mathematics. They range from signal processing, to software projects, to mathematical arguments. </p>
 						</div>
 
 						<!-- Gallery -->
@@ -144,8 +144,8 @@
 										<img src="images/gallery/thumbs/01.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Online Auction Server</h3>
+										<p> Used multithreading, sockets, reflection, object-oriented programming, and more to design a communication channel between the server and numerous clients in Java. </p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -156,8 +156,8 @@
 										<img src="images/gallery/thumbs/02.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Flight Simulator</h3>
+										<p> Employed multithreading in Java to design a realistic flight simulator that accurately handles ticket booking between the corporate office and a given flight airlines. </p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -168,8 +168,8 @@
 										<img src="images/gallery/thumbs/03.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Magna Amet</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3> Operating System</h3>
+										<p>Created my own operating system in C++, specifically a channel in which numerous text commands are realized.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
