--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/04.jpg" class="image">
+									<a href="https://drive.google.com/file/d/1OhuKCGgORmoIGWEgz5Z_1BGd0Vq9OXNH/view?usp=sharing" class="image">
 										<img src="images/gallery/thumbs/04.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Sed Tempus</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Mathematical Argument: Irrationality of root2 + root3</h3>
+										<p>Employed mathematical techniques to prove the irrationality of root2 + root3, as shown in the link.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
