--- a/index.html
+++ b/index.html
@@ -188,12 +188,12 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/05.jpg" class="image">
+									<a href="https://drive.google.com/file/d/1C8XMdgMk2cFGd_6cdgb_8r4p7uiIX_6W/view?usp=sharing" class="image">
 										<img src="images/gallery/thumbs/05.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ultrices Magna</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Research: Black Student Education</h3>
+										<p> A research paper I wrote for a political science class at UT Austin, specifically involving the concept of same-race teachers on black student outcomes.</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
