--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>ASHWIN RAM</h1>
-							<p class="major"> Aspiring venture capitalist studying Computer Engineering with a focus on Machine Learning, Data Science, and Power Electronics. Outside of these topics, I enjoy running,
-							working out, playing basketball, giving speeches, and meeting and talking with new people.
+							<p class="major"> Hello! My name is Ashwin Ram, and I am currently double majoring in <b> Electrical and Computer Engineering </b> along with <b> Mathematics. </b> at the <b> Cockrell School of Engineering, University of Texas at Austin. </b> I was <b> Valedictorian </b> of <b> Cedar Park High School </b> 
+								for the Graduating Class of <b> 2021 </b>. I currently hold a <b> second-degree black belt </b> in <b> Taekwondo </b> awarded by <b> Grandmaster Jhoon Rhee. </b> I enjoy public speaking, running, exercising, and learning. I would like to pursue the intersection of hardware, software, and pure mathematics. 
 							Thank you for visiting my personal website!
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -41,12 +41,12 @@
 							<ul>
 							<li> <h4>In-Progress Engineering Coursework Taken at UT Austin (Spring 2023) </h4> 
 							<ul> 
-							<li> ECE382V (Human Signals: Sensing and Analysis)
-							<li> ECE360C (Algorithms)
-							<li> ECE351K (Probability Theory for Engineers)
-							<li> ECE316 (Digital Logic Design)
-							<li> ECE461L (Software Engineering and Design Laboratory)
-							<li> M365C (Real Analysis I)
+								<li> <h4> ECE382V (Human Signals: Sensing and Analysis) </h4>
+								<li> <h4> ECE360C (Algorithms) </h4> 
+								<li> <h4> ECE351K (Probability Theory for Engineers) </h4>
+								<li> <h4> ECE316 (Digital Logic Design) </h4>
+								<li> <h4> ECE461L (Software Engineering and Design Laboratory) </h4>
+								<li> <h4> M365C (Real Analysis I) </h4>
 							</ul>
 							</ul>
 							<ul>
