--- a/index.html
+++ b/index.html
@@ -129,8 +129,22 @@
 							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
-
+						
 				<!-- Five -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>WORK EXPERIENCE</h2>
+							<p></p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">Learn More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/spotlight03.jpg" alt="" />
+						</div>
+					</section>
+
+				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>TECHNICAL PROJECTS</h2>
@@ -305,7 +319,7 @@
 
 					</section>
 
-				<!-- Six -->
+				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Accolades</h2>
@@ -376,7 +390,7 @@
 						</div>
 					</section>
 
-				<!-- Seven -->
+				<!-- Eight -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
