--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					</section>
 						
 				<!-- Five -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in>
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>WORK EXPERIENCE</h2>
 							<p></p>
