--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
 							<ul>
 							<li> <h4>In-Progress Engineering Coursework Taken at UT Austin (Spring 2023) </h4> 
 							<ul> 
-							<li> <h4> ECE382V (Human Signals: Sensing and Analysis) </h4>
-							<li> <h4> ECE360C (Algorithms) </h4> 
-							<li> <h4> ECE351K (Probability Theory for Engineers) </h4>
-							<li> <h4> ECE316 (Digital Logic Design)</h4>
-							<li> <h4> ECE461L (Software Engineering and Design Laboratory) </h4>
-							<li> <h4> M365C (Real Analysis I) </h4>
+							<li> <h4> ECE382V (Human Signals: Sensing and Analysis) </h4> <li> <h4> ECE360C (Algorithms) </h4> <li> <h4> ECE351K (Probability Theory for Engineers) </h4><li> <h4> ECE316 (Digital Logic Design)</h4><li> <h4> ECE461L (Software Engineering and Design Laboratory) </h4> <li> <h4> M365C (Real Analysis I) </h4>
 							</ul>
 							</ul>
 							<ul>
@@ -133,14 +128,14 @@
 				<!-- Five -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>WORK EXPERIENCE</h2>
+							<h2>Fall 2022: University Honors, 4.0 </h2>
 							<p></p>
 							<ul class="actions stacked">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight03.jpg" alt="" />
+							<img src = "Screen Shot 2022-12-18 at 12.10.27 AM.png" alt = "University Grades Fall 2022">
 						</div>
 					</section>
 
