--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 							<ul>
 							<li> <h4>In-Progress Engineering Coursework Taken at UT Austin (Spring 2023) </h4> 
 							<ul> 
-							<li> <h4> ECE382V (Human Signals: Sensing and Analysis) </h4> <li> <h4> ECE360C (Algorithms) </h4> <li> <h4> ECE351K (Probability Theory for Engineers) </h4><li> <h4> ECE316 (Digital Logic Design)</h4><li> <h4> ECE461L (Software Engineering and Design Laboratory) </h4> <li> <h4> M365C (Real Analysis I) </h4>
-							</ul>
+							<li> ECE382V (Human Signals: Sensing and Analysis) <li>ECE360C (Algorithms)<li> ECE351K (Probability Theory for Engineers) <li> ECE316 (Digital Logic Design) <li> ECE461L (Software Engineering and Design Laboratory)<li>M365C (Real Analysis I)
+							
 							</ul>
 							<ul>
 							<li> <h4> ECE Courses <h4> <ul> <li> ECE422C(Advanced Software Design and Implementation II in Java) <li> ECE313 (Linear Systems and Signals) <li> ECE333T (Engineering Communication) <li> ECE312 (Software Design in C/C++) <li> ECE411 (Circuit Theory) <li> ECE302 (Introduction to Electrical Engineering) <li> ECE306 (Introduction to Computing) </ul>
@@ -135,7 +135,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src = "Screen Shot 2022-12-18 at 12.10.27 AM.png" alt = "University Grades Fall 2022">
+							<img src = "Screen Shot 2022-12-18 at 12.10.27 AM.png" alt = "University Grades Fall 2022"/>
 						</div>
 					</section>
 
@@ -323,7 +323,7 @@
 								<section>
 									<span class="icon style2 major fa-gem"></span>
 									<h3>Fall 2022: University Honors, 4.0 GPA</h3>
-									<img src = "Screen Shot 2022-12-18 at 12.10.27 AM.png" alt = "University Grades 2022">
+									<img src = "Screen Shot 2022-12-18 at 12.10.27 AM.png" alt = "University Grades 2022"/>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
 								<section>
