--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Screen Shot 2022-12-18 at 1.48.16 AM.png" alt="" />
+							<img src="images/spotlight03.jpg" alt="" />
 						</div>
 					</section>
 
