--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							  <h3> Summer 2022 </h3>
 							  <p> <b>Software Design and Implementation I | EE312 </b> <i>(Instructor: Vallath Nandakumar)</i></p>
-							  <p> <b>Education and Black America | UGS 302 </b> <i>(Instructor: Robert Foster)</i></p>
+							  <p> <b>Education and Black America | UGS 302 </b> <i>(Instructor: Kevin Foster)</i></p>
 
 							  <h3> Spring 2022 </h3>
 							  <p> <b>Advanced Calculus for Applications II (Vector Calculus) | M427L </b> <i>(Instructor: Kirk Blazek)</i> </p>
