--- a/index.html
+++ b/index.html
@@ -88,14 +88,18 @@
 			<ol>
  			<li> <h3> Department of Electrical and Computer Engineering at the University of Texas at Austin</h3> </li>
                     <ul>
-                    <li> <h4>Fall 2022, Spring 2023: ECE411 (Circuit Theory) Teaching Assistant  </h4>
-			    <p> <b> Teaching Assistant for <a href = "https://www.ece.utexas.edu/people/faculty/earl-swartzlander"> <i> Dr. Earl Swartzlander </i> </a> </b> </p>
+                    <li> <h4>Circuit Theory (ECE411) Teaching Assistant </h4>
+			    <p> <b> Teaching Assistant for <a href = "https://www.ece.utexas.edu/people/faculty/earl-swartzlander"> <i> Dr. Earl Swartzlander </i> </a> during Fall 2022, Spring 2023  </b> </p>
 			    <p> Educate and assist in the engineering laboratory over 150+ students on concepts ranging from Kirchoff's Voltage and Current Laws to RC, RL, and RLC Circuits, to DC Steady State and AC Circuit Analysis
-				    to transformer circuits and magnetic coupling, to three-phase circuit analysis and three-phase power. 
-		    <li> <h4>Fall 2022: M427L-H (Vector Calculus Honors) Teaching Assistant  </h4>
-			    <p> <b> Teaching Assistant for <a href = "https://web.ma.utexas.edu/users/beckner/"> <i> Dr. William Beckner </i> </a> </b> </p>
+				    to transformer circuits and magnetic coupling, to three-phase circuit analysis and three-phase power. Grade Circuit Labs, Reports, and Homeworks. 
+		    <li> <h4>Vector Calculus Honors (M427L-H) Teaching Assistant  </h4>
+			    <p> <b> Teaching Assistant for <a href = "https://web.ma.utexas.edu/users/beckner/"> <i> Dr. William Beckner </i> </a> during Fall 2022 </b> </p>
 			    <p> Educate over 100+ students in concepts ranging from matrices, elements of vector analysis and calculus functions of several variables, including gradient, divergence, and curl of a vector field, multiple integrals and chain rules, length and area, line and surface integrals, Greens theorem in the plane and space.
-                    </ul>
+                    <li> <h4> Integral Calculus for Science (M408S) Teaching Assistant </h4>
+			<p> <b> Teaching Assistant for <a href = "https://sites.google.com/site/lauravillafuertealtuzar030680/"> <i> Dr. Laura Villafuerte Altúzar </i> </a> during Spring 2023 </b> </p>    
+					    <p> Educate over 100+ students in concepts ranging from integration, the fundamental theorem of calculus, to double integrals in polar regions, to transcendental functions, sequences and infinite series, including Taylor and Maclaurin Series.
+
+			</ul>
                              
   <li><h3> Applied Computing Foundation</h3></li>
        <ul>
