--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			    <p> Educate over 100+ students in concepts ranging from matrices, elements of vector analysis and calculus functions of several variables, including gradient, divergence, and curl of a vector field, multiple integrals and chain rules, length and area, line and surface integrals, Greens theorem in the plane and space.
                     <li> <h4> Integral Calculus for Science (M408S) Teaching Assistant </h4>
 			<p> <b> Teaching Assistant for <a href = "https://sites.google.com/site/lauravillafuertealtuzar030680/"> <i> Dr. Laura Villafuerte Altúzar </i> </a> during Spring 2023 </b> </p>    
-					    <p> Educate over 100+ students in concepts ranging from integration, the fundamental theorem of calculus, to double integrals in polar regions, to transcendental functions, sequences and infinite series, including Taylor and Maclaurin Series.
+					    <p> Educate over 100+ students in concepts ranging from integration, the fundamental theorem of calculus, to double integrals in polar regions, to transcendental functions, sequences and infinite series, including Taylor and Maclaurin Series. </p>
 
 			</ul>
                              
