--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 								
 								
 							</ul>
-							 <h2> Publications  </h2>
+							 <h2> PUBLICATIONS  </h2>
 							  <ol>
 							   <li> <a href="https://www.amazon.com/Hacking-SAT-Math-Section-Techniques/dp/B08P1MHG6R"> <i> Hacking SAT Math </i> </a>, November 2020</li>
 							    <img src = "images/Screen Shot 2022-12-25 at 3.19.00 PM.png" width = "300" height = "400">
