--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/Ashwin.jpg" alt="" />
+							<img src="images/Ashwin.jpg" width = "1000" alt="" />
 						</div>
 					</section>
 
