--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Ashwin Ram's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,7 +25,7 @@
 								for the Graduating Class of <b> 2021 </b>. I currently hold a <b> second-degree black belt </b> in <b> Taekwondo </b> awarded by <b> Grandmaster Jhoon Rhee. </b> I enjoy public speaking, running, exercising, and learning. I would like to pursue the intersection of hardware, software, and pure mathematics and become a <b> venture capitalist </b>. 
 							Thank you for visiting my personal website!
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="https://drive.google.com/file/d/19gFFL3oeE714Fyavt58iBddgDzVzefFm/view?usp=sharing" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
 						<div class="image">
