--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								for the Graduating Class of <b> 2021 </b>. I currently hold a <b> second-degree black belt </b> in <b> Taekwondo </b> awarded by <b> Grandmaster Jhoon Rhee. </b> I enjoy public speaking, running, exercising, and learning. I would like to pursue the intersection of hardware, software, and pure mathematics and become a <b> venture capitalist </b>. 
 							Thank you for visiting my personal website!
 							<ul class="actions stacked">
-								<li><a href="https://drive.google.com/file/d/19gFFL3oeE714Fyavt58iBddgDzVzefFm/view?usp=sharing" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="https://drive.google.com/file/d/19gFFL3oeE714Fyavt58iBddgDzVzefFm/view?usp=sharing" class="button big wide smooth-scroll-middle">My Current Resume</a></li>
 							</ul>
 						</div>
 						<div class="image">
