--- a/index.html
+++ b/index.html
@@ -438,7 +438,12 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							
-							<h2> Interesting News! </h2>
+							<<h2> Interesting News! </h2>
+
+						  <ol>
+						    <li> After just 3 semesters at UT, I earned the Senior Classification in December of 2022! </li>
+						    <img src = "images/Screen Shot 2022-12-25 at 4.23.18 PM.png" width = "1200" height = "400">
+						  </ol>
 							
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
