--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
 						<div class="inner medium">
 							
 							<<h2> Interesting News! </h2>
+						<p> I will be putting all of my "cool" news here, starting Fall 2022. </p>
 
 						  <ol>
 						    <li> After just 3 semesters at UT, I earned the Senior Classification in December of 2022! </li>
