--- a/index.html
+++ b/index.html
@@ -438,13 +438,15 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							
-							<<h2> Interesting News! </h2>
-						<p> I will be putting all of my "cool" news here, starting Fall 2022. </p>
+							 <h2> Interesting News! </h2>
+							<p> I have decided that starting Fall 2022, I will be putting all of my "cool" news here. This will be ordered in terms of most recent news first.</p>
 
-						  <ol>
-						    <li> After just 3 semesters at UT, I earned the Senior Classification in December of 2022! </li>
-						    <img src = "images/Screen Shot 2022-12-25 at 4.23.18 PM.png" width = "1200" height = "400">
-						  </ol>
+							  <ol>
+							    <li> In early December 2022, I got my marks back - I made straight As with 19 hours of coursework this Fall! </li>
+							      <img src = "images/Screen Shot 2022-12-25 at 4.30.49 PM.png" width = "600" height = "500">
+							    <li> After just 3 semesters at UT, I earned the Senior Classification in December of 2022! </li>
+							    <img src = "images/Screen Shot 2022-12-25 at 4.23.18 PM.png" width = "1200" height = "400">
+							  </ol>
 							
 							<h2>Get in touch</h2>
 							<form method="post" action="#">
